--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -155,7 +155,7 @@ label-urgent = "%icon%     "
 [module/date]
 type = custom/script
 ; exec = date +"%H:%M:%S  %Y-%m-%d  %a"
-exec = date +"%%{T3}%H:%M%%{T-}  %A %d"
+exec = date +"%%{T3}%H:%M%%{T-}  %A %d %b"
 interval = 1
 click-right = qutebrowser !gcal
 
