--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1
+exec-once = ~/.config/waybar/spotify-receiver & waybar & hyprpaper & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1
 
 
 
