--- a/dot.yaml
+++ b/dot.yaml
@@ -7,6 +7,7 @@ links:
   .config/dunst/latte.conf: ~/.config/dunst/latte.conf
   .config/dunst/mocha.conf: ~/.config/dunst/mocha.conf
   .config/fish/functions: ~/.config/fish/functions
+  .config/fish/fish_plugins: ~/.config/fish/fish_plugins
   .config/fish/themes: ~/.config/fish/themes
   .config/fish/config.fish: ~/.config/fish/config.fish
   .config/hypr: ~/.config/hypr
