--- a/dot.yaml
+++ b/dot.yaml
@@ -9,6 +9,7 @@ links:
   .config/fish/functions: ~/.config/fish/functions
   .config/fish/fish_plugins: ~/.config/fish/fish_plugins
   .config/fish/themes: ~/.config/fish/themes
+  .config/fish/completions: ~/.config/fish/completions
   .config/fish/config.fish: ~/.config/fish/config.fish
   .config/hypr: ~/.config/hypr
   .config/kitty/kitty.conf: ~/.config/kitty/kitty.conf
