hypr: add keybinds to like or add to playlist current spotify track

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -225,7 +225,8 @@ binde = , xf86audiomute, exec, $here/volume_brightness.sh volume_mute
 bind = , xf86audionext, exec, playerctl next
 bind = , xf86audioprev, exec, playerctl previous
 bind = , xf86audioplay, exec, playerctl play-pause
-bind = , xf86audiostop, exec, notify-send quoicoubaka
+bind = , xf86audiostop, exec, rofi-spotify --like-current
+bind = SHIFT, xf86audiostop, exec, rofi-spotify --add-to-playlist
 
 bind = , print, exec, hyprshot -m output
 bind = SHIFT, print, exec, hyprshot -m region
@@ -242,7 +243,6 @@ bind = $mainMod, equal, togglespecialworkspace
 windowrulev2 = opacity 0.8 override 0.6 override,class:(kitty)
 windowrulev2 = opacity 0.8 override 0.6 override,class:(neovide)
 windowrulev2 = tile,class:(dev.warp.Warp)
-# windowrulev2 = opacity 1 override,class:(firefox)
 
 # Assigning apps to workspaces
 windowrulev2 = workspace 9 silent,class:(Spotify)
@@ -253,4 +253,4 @@ windowrulev2 = group set,class:(Caprine)
 windowrulev2 = workspace 10 silent,class:(discord)
 windowrulev2 = group set,class:(discord)
 
-
+windowrulev2 = stayfocused,class:(Rofi)
