hyprland: configure hyprexpo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,6 +240,24 @@ bind = $mainMod SHIFT, F, fullscreen, 1
 bind = $mainMod SHIFT, equal, movetoworkspace, special
 bind = $mainMod, equal, togglespecialworkspace
 
+# Overview 
+# bind = $mainMod, A, exec, hyprctl dispatch overview:toggle  # (plugin: https://github.com/KZDKM/Hyprspace)
+
+bind = $mainMod, A, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad, 4 fingers
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
+
 windowrulev2 = opacity 0.8 override 0.6 override,class:(kitty)
 windowrulev2 = opacity 0.8 override 0.6 override,class:(neovide)
 windowrulev2 = tile,class:(dev.warp.Warp)
