--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = /home/uwun/.config/wallpaper-light.png
 preload = /home/uwun/.config/wallpaper-dark.png
 
 
-wallpaper = ,/home/uwun/.config/wallpaper-light.png
+wallpaper = ,/home/uwun/.config/wallpaper-dark.png
