--- a/dot.yaml
+++ b/dot.yaml
@@ -29,3 +29,4 @@ links:
   .config/waybar/net7-black.png: ~/.config/waybar/net7-black.png
   .config/waybar/net7-white.png: ~/.config/waybar/net7-white.png
   .config/spicetify/Extensions: ~/.config/spicetify/Extensions
+  .config/starship.toml: ~/.config/starship.toml
