--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = hyprpm reload -n & ~/.config/waybar/spotify-receiver & waybar & hyprpaper & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1
+exec-once = hyprpm reload -n & ~/.config/waybar/spotify-receiver & waybar & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1 & bash -c 'killall hyprpaper; hyprpaper' &
 
 
 
@@ -260,6 +260,7 @@ plugin {
 
 windowrulev2 = opacity 0.8 override 0.6 override,class:(kitty)
 windowrulev2 = opacity 0.8 override 0.6 override,class:(neovide)
+windowrulev2 = opacity 1 override 1 override,class:(obs)
 windowrulev2 = tile,class:(dev.warp.Warp)
 
 # Assigning apps to workspaces
@@ -270,6 +271,8 @@ windowrulev2 = workspace 10 silent,class:(Caprine)
 windowrulev2 = group set,class:(Caprine)
 windowrulev2 = workspace 10 silent,class:(discord)
 windowrulev2 = group set,class:(discord)
+windowrulev2 = workspace 3 silent,class:(^MATLAB),title:(^Figure \d: )
+windowrulev2 = workspace 3 silent,class:(Backend),title:(\[dev\])
 
 windowrulev2 = stayfocused,class:(Rofi)
 
@@ -277,4 +280,6 @@ windowrulev2 = stayfocused,class:(Rofi)
 windowrulev2 = tile,class:(qemu-system-x86_64)
 windowrulev2 = tile,class:(Pianoteq),title:(^Pianoteq)
 windowrulev2 = tile,class:(^MATLAB),title:(^Figure \d: )
-windowrulev2 = workspace 3 silent,class:(^MATLAB),title:(^Figure \d: )
+
+# kdwallet popups should steal focus
+windowrulev2 = stayfocused,class:(kwalletd5),title:(^KDE Wallet Service$) 
