--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -22,7 +22,7 @@ presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:defaul
 
 #* Set to True to enable "h,j,k,l,g,G" keys for directional control in lists.
 #* Conflicting keys for h:"help" and k:"kill" is accessible while holding shift.
-vim_keys = False
+vim_keys = True
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
 rounded_corners = True
@@ -35,7 +35,7 @@ rounded_corners = True
 graph_symbol = "braille"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
-graph_symbol_cpu = "block"
+graph_symbol_cpu = "default"
 
 # Graph symbol to use for graphs in gpu box, "default", "braille", "block" or "tty".
 graph_symbol_gpu = "default"
@@ -44,20 +44,20 @@ graph_symbol_gpu = "default"
 graph_symbol_mem = "default"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
-graph_symbol_net = "tty"
+graph_symbol_net = "default"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu net"
+shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "pid"
+proc_sorting = "user"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -230,7 +230,7 @@ nvml_measure_pcie_speeds = True
 gpu_mirror_graph = True
 
 #* Custom gpu0 model name, empty string to disable.
-custom_gpu_name0 = ""
+custom_gpu_name0 = "RX 460"
 
 #* Custom gpu1 model name, empty string to disable.
 custom_gpu_name1 = ""
