--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=,preferred,auto,1
 # Execute your favorite apps at launch
 exec-once = hyprpm reload -n & ~/.config/waybar/spotify-receiver & waybar & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1 & bash -c 'killall hyprpaper; hyprpaper' &
 
-
+exec-once = sleep 5 && fish -c 'colorswitch-watch &'
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -47,7 +47,7 @@ input {
 
     touchpad {
         natural_scroll = yes
-	scroll_factor = 0.2
+        scroll_factor = 0.2
     }
 
 
@@ -273,6 +273,7 @@ windowrulev2 = workspace 10 silent,class:(discord)
 windowrulev2 = group set,class:(discord)
 windowrulev2 = workspace 3 silent,class:(^MATLAB),title:(^Figure \d: )
 windowrulev2 = workspace 3 silent,class:(Backend),title:(\[dev\])
+windowrulev2 = workspace 3 silent,class:(Code),title:(^\[Extension Development Host\] )
 
 windowrulev2 = stayfocused,class:(Rofi)
 
