--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,5 +1,5 @@
-$primaryscreen = DVI-D-1
-$secondaryscreen = HDMI-A-1
+$primaryscreen = HDMI-A-1
+$secondaryscreen = DVI-D-1
 
 monitor=$primaryscreen,preferred,0x0,1
 monitor=$secondaryscreen,preferred,1920x0,1
