--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -187,10 +187,10 @@ bind = $mainMod SHIFT, eacute, movetoworkspace, 2
 bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
 bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
 bind = $mainMod SHIFT, parenleft, movetoworkspace, 5
-bind = $mainMod SHIFT, minus, movetoworkspace, 6
+bind = $mainMod SHIFT, minus, movetoworkspacesilent, 6
 bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, underscore, movetoworkspace, 8
-bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
+bind = $mainMod SHIFT, ccedilla, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
 
 # Move active workspace to other monitor
@@ -281,6 +281,7 @@ windowrulev2 = stayfocused,class:(Rofi)
 windowrulev2 = tile,class:(qemu-system-x86_64)
 windowrulev2 = tile,class:(Pianoteq),title:(^Pianoteq)
 windowrulev2 = tile,class:(^MATLAB),title:(^Figure \d: )
+windowrulev2 = tile,title:(^Vital)
 
 # kdwallet popups should steal focus
 windowrulev2 = stayfocused,class:(kwalletd5),title:(^KDE Wallet Service$) 
