--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -24,7 +24,8 @@ gui:
       - '#f9e2af'
 git:
   paging:
-    useConfig: true
+    colorArg: always
+    externalDiffCommand: difft
 keybinding:
   commits:
     viewResetOptions: '<c-g>'
