--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -112,10 +112,10 @@ dwindle {
     force_split = 2
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+ # master {
+ #     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+ #     new_is_master = true
+ # }
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -243,7 +243,7 @@ bind = $mainMod, equal, togglespecialworkspace
 # Overview 
 # bind = $mainMod, A, exec, hyprctl dispatch overview:toggle  # (plugin: https://github.com/KZDKM/Hyprspace)
 
-bind = $mainMod, A, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+ # bind = $mainMod, A, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 plugin {
     hyprexpo {
@@ -261,6 +261,7 @@ plugin {
 windowrulev2 = opacity 0.8 override 0.6 override,class:(kitty)
 windowrulev2 = opacity 0.8 override 0.6 override,class:(neovide)
 windowrulev2 = opacity 1 override 1 override,class:(obs)
+windowrulev2 = opacity 1 override 1 override,class:(firefox)
 windowrulev2 = tile,class:(dev.warp.Warp)
 
 # Assigning apps to workspaces
@@ -272,6 +273,7 @@ windowrulev2 = group set,class:(Caprine)
 windowrulev2 = workspace 10 silent,class:(discord)
 windowrulev2 = group set,class:(discord)
 windowrulev2 = workspace 3 silent,class:(^MATLAB),title:(^Figure \d: )
+windowrulev2 = workspace 3 silent,class:(^Matplotlib),title:(^Figure \d)
 windowrulev2 = workspace 3 silent,class:(Backend),title:(\[dev\])
 windowrulev2 = workspace 3 silent,class:(Code),title:(^\[Extension Development Host\] )
 
