--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = hyprpm reload -n & ~/.config/waybar/spotify-receiver & waybar & fcitx5 & discord & spotify & caprine & element-desktop & firefox & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1 & bash -c 'killall hyprpaper; hyprpaper' &
+exec-once = hyprpm reload -n & ~/.config/waybar/spotify-receiver & waybar & fcitx5 & discord & spotify & caprine & element-desktop & zen-browser & ckb-next --background & /usr/lib/polkit-kde-authentication-agent-1 & bash -c 'killall hyprpaper; hyprpaper' &
 
 exec-once = sleep 5 && fish -c 'colorswitch-watch &'
 
@@ -146,7 +146,8 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, C, exit, 
 bind = $mainMod, E, exec, neovide
-bind = $mainMod, B, exec, firefox
+bind = $mainMod, B, exec, zen-browser
+bind = $mainMod SHIFT, B, exec, firefox
 bind = $mainMod, P, exec, ~/.config/rofi/query
 bind = $mainMod SHIFT, Space, togglefloating, 
 bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-3/launcher.sh
