--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -6,7 +6,7 @@
   },
   "vim_mode": true,
   "ui_font_size": 14,
-  "buffer_font_family": "Fira Code",
+  "buffer_font_family": "Victor Mono",
   "buffer_font_weight": 700,
   "buffer_font_size": 14,
   "autosave": {
